# Dysarthria_App

./: .gitignore  README.md  main.py  pyproject.toml
backend/: app.py
backend/models/: dysarthria_model_eng.keras  unet_english_clean.pth  unet_english_clean2.pth  unet_russian_pretrained.pth
backend/models/whisper-finetuned/: config.json  generation_config.json  tokenizer_config.json
backend/src/: binary_preprocess.py  english_preprocess.py  multiclass_preprocess.py  russian_preprocess.py  russian_preprocess1.py  speech_to_emotion.py  unet.py
frontend/: binary.html  english.html  englishS2S.html  englishS2T.html  index.html  multiclass.html  russian.html
