[project]
name = "dysarthria-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "jsonify>=0.5",
    "librosa>=0.11.0",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "requests>=2.32.4",
    "tensorflow>=2.19.0",
]
